fix: fix navbar on tablet size

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -4,19 +4,29 @@
   display: flex;
   justify-content: center;
   z-index: 10;
+  background-color: transparent;
+  height: min-content;
+  // height: 100px;
 }
 
 .navbar-desktop {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  height: 100px;
-  background-color: transparent;
-  padding: 10px 20px;
+  width: 100%;
   position: fixed;
   top: 0;
   z-index: 10;
+}
+
+.nav-links-container{
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 100px;
+  padding: 10px 20px;
   border-bottom: 1px solid #8C8C8C;
 }
 
